--- a/AppHelp/app/src/main/res/layout/activity_marcar_ponto.xml
+++ b/AppHelp/app/src/main/res/layout/activity_marcar_ponto.xml
@@ -5,131 +5,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:orientation="vertical">
+            <TextClock
+                android:id="@+id/relogioID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:format24Hour="Relógio: HH:mm:ss"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nome Completo"
-                    android:textAlignment="center"
-                    android:textSize="25dp"/>
+            <TextView
+                android:id="@+id/dataPontoID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Data:"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+        </LinearLayout>
 
-                    <TableRow>
-                        <TextView
-                            android:text="Data  "
-                            android:layout_weight="1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                        <TextView
-                            android:text="Entrada"
-                            android:layout_weight="1"/>
+            <Button
 
-                        <TextView
-                            android:text="Saída  "
-                            android:layout_weight="1"/>
+                android:id="@+id/botaoEntradaID"
+                android:layout_width="120dp"
+                android:layout_height="@android:dimen/app_icon_size"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:text="Entrada" />
 
-                    </TableRow>
+            <Button
+                android:id="@+id/botaoSaidaID"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:text="Saída" />
 
-                </TableLayout>
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+        <Button
+            android:id="@+id/botaoVoltarPontoID"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Voltar" />
 
-                    <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+    </LinearLayout>
 
-                    </ListView>
 
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="148dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textoMarcacaoID"
+                android:id="@+id/nomePontoID"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="Marcação de horario"
+                android:text="Nome completo"
                 android:textAlignment="center"
-                android:textSize="@dimen/cabecalho" />
+                android:textSize="25sp" />
 
-            <Space
+            <ListView
+                android:id="@+id/listViewPontosID"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
-            </Space>
+                android:layout_height="200dp"
+                android:layout_weight="1"
+                android:fastScrollEnabled="true">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
+            </ListView>
 
-                <Button
-
-                    android:id="@+id/botaoInicioID"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="120dp"
-                    android:layout_height="@android:dimen/app_icon_size"
-                    android:layout_gravity="left"
-                    android:text="Inicio"
-                    android:layout_marginRight="25dp"/>
-
-                <Button
-                    android:id="@+id/botaoFimID"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginLeft="25dp"
-                    android:text="Fim" />
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
-            </Space>
-
-            <Button
-                android:id="@+id/botaoVoltarIDAddHr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Voltar" />
         </LinearLayout>
 
-
-
-    </LinearLayout>
-
+    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
