--- a/AppHelp/app/src/main/res/layout/activity_criar_horario.xml
+++ b/AppHelp/app/src/main/res/layout/activity_criar_horario.xml
@@ -26,40 +26,18 @@
                     android:orientation="vertical">
 
                     <!--Cabecalho da tela-->
-                    <LinearLayout
+
+
+                    <TextView
+                        android:id="@+id/cabecalhoCriarHorarioID"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="20dp">
+                        android:layout_height="match_parent"
+                        android:text="Criar Horário"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/cabecalho"
+                        android:gravity="center"
+                        android:padding="10dp"/>
 
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/fotoID"
-                                android:layout_width="140dp"
-                                android:layout_height="120dp"
-                                android:src="@drawable/boneco_perfil"/>
-
-                            <TextView
-                                android:layout_width="140dp"
-                                android:layout_height="wrap_content"
-                                android:text="Nome: "
-                                android:textSize="18sp"/>
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/cabecalhoCriarHorarioID"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Criar Horário"
-                            android:textAlignment="center"
-                            android:textSize="@dimen/cabecalho"
-                            android:gravity="center"/>
-                    </LinearLayout>
 
                     <!-- Componentes principais da tela -->
                     <EditText
