--- a/AppHelp/app/src/main/res/layout/activity_horarios.xml
+++ b/AppHelp/app/src/main/res/layout/activity_horarios.xml
@@ -8,46 +8,22 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Quadro de Horários"
+                android:textAlignment="center"
+                android:textSize="@dimen/cabecalho"
+                android:padding="10dp"/>
 
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/fotoID"
-                        android:layout_width="140dp"
-                        android:layout_height="120dp"
-                        android:src="@drawable/boneco_perfil" />
-
-                    <TextView
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:text="Nome: "
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Horários"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/cabecalho" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,15 +56,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp">
-
-
-
-            </android.support.constraint.ConstraintLayout>
 
             <ExpandableListView
                 android:id="@+id/lvExp"
