--- a/AppHelp/app/src/main/res/layout/activity_mostrar_atividades.xml
+++ b/AppHelp/app/src/main/res/layout/activity_mostrar_atividades.xml
@@ -20,18 +20,14 @@
             android:layout_marginBottom="20dp">
 
 
-            <ImageView
-                android:layout_width="@dimen/largura_foto_perfil"
-                android:layout_height="@dimen/altura_foto_perfil"
-                android:src="@drawable/boneco_perfil" />
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Atividades Cadastradas"
                 android:textAlignment="center"
                 android:textSize="@dimen/cabecalho"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:padding="10dp"/>
         </LinearLayout>
 
         <ScrollView
