--- a/AppHelp/app/src/main/res/layout/activity_perfil.xml
+++ b/AppHelp/app/src/main/res/layout/activity_perfil.xml
@@ -26,27 +26,14 @@
                     android:layout_centerHorizontal="true"
                     android:orientation="vertical">
 
-                    <!--Cabecalho da tela-->
-                    <LinearLayout
+                    <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="20dp">
-
-
-                        <ImageView
-                            android:layout_width="@dimen/largura_foto_perfil"
-                            android:layout_height="@dimen/altura_foto_perfil"
-                            android:src="@drawable/boneco_perfil" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Perfil"
-                            android:textAlignment="center"
-                            android:textSize="@dimen/cabecalho"
-                            android:gravity="center"/>
-                    </LinearLayout>
+                        android:layout_height="match_parent"
+                        android:text="Perfil"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/cabecalho"
+                        android:gravity="center"
+                        android:padding="10dp"/>
 
                     <!-- Componentes principais da tela -->
                     <EditText
