--- a/AppHelp/app/src/main/res/layout/activity_mostrar_atividades.xml
+++ b/AppHelp/app/src/main/res/layout/activity_mostrar_atividades.xml
@@ -36,7 +36,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="320dp">
+                android:layout_height="320dp"
+                android:orientation="vertical">
 
                 <ListView
                     android:id="@+id/listViewAtividades"
@@ -44,6 +45,15 @@
                     android:layout_height="320dp">
 
                 </ListView>
+
+                <TextView
+                    android:id="@+id/listaVaziaID"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nenhuma Atividade Cadastrada!"
+                    android:textAlignment="center"
+                    android:textSize="22dp"
+                    android:visibility="gone"/>
             </LinearLayout>
         </ScrollView>
 
